PR/41558: Stathis Kamperis: Treat a backslash followed by NUL as NUL, instead of a backslash if FNM_NOESCAPE is not set. According to TOG: a backslash in a pattern followed by any other character, will match that second character in the string.